# plycutter

./: .gitignore  404.html  README.md  environment.yml  index.html  mkdocs.yml  objects.inv  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/workflows/: docs.yml  python-conda.yml  python-package.yml
acknowledgments/: index.html
api/plycutter/: index.html
api/plycutter/geometry/geom1d/: index.html
api/plycutter/geometry/geom2d/: index.html
api/plycutter/sheetbuild/: index.html
api/plycutter/sheetplex/: index.html
dev/: index.html
docs/: acknowledgments.md  dev.md  index.md  installation.md
docs/api/: plycutter.md
docs/api/plycutter/: sheetbuild.md  sheetplex.md
docs/api/plycutter/geometry/: geom1d.md  geom2d.md
docs/gallery/: format.md
docs/gallery/dollhouse/: index.md
docs/gallery/virtalahde-kotelo/: index.md
docs/modeling-tutorials/: solid_to_hollow.md
gallery/dollhouse/: index.html
gallery/format/: index.html
gallery/virtalahde-kotelo/: index.html
installation/: index.html
plycutter/: canned.py  command_line.py  create_sheetplex.py  heuristics.py  misc.py  plytypes.py  sheetbuild.py  sheetplex.py  writer.py
plycutter/geometry/: aabb.py  geom1d.py  geom2d.py  geom2dbase.py  types2d.py
plycutter/geometry/impl2d/: __init__.py  arrangement2d.py  cell_merger.py  frangle2d.py  geom2d_simple_holes.py  pmr_quadtree.py  primitive2d.py  scan2d.py  segment_tree.py
plycutter/geometry/impl2d/tests/: test_cell_merger.py  test_frangle2d.py  test_geom2d_simple_holes_cases.py  test_geom2d_simple_holes_stress.py  test_pmr_quadtree.py  test_primitive2d.py  test_scan2d.py  test_segment_tree.py  util.py
plycutter/geometry/tests/: test_aabb.py  test_benchmark.py  test_geom1d.py  test_geom2d.py
plycutter/tests/: test_command_line.py
search/: search_index.json
tests/data/: PlyTest0.1.stl
